web app deployed code

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,12 +1,29 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Sensor Dash",
+  "name": "AD Sensor Dashboard",
   "icons": [
     {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
+    },
+    {
+      "src":"logo.svg",
+      "sizes": "512x512",
+      "type":"image/svg+xml"
+    },
+    {
+      "src": "humidity-icon.png",
+      "sizes":"65x55, 55x45",
+      "type": "image/png"
+    },
+    {
+      "src": "appleicon.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "any maskable"
     }
+
   ],
   "start_url": ".",
   "display": "standalone",
